changed Everit logo changed twitter link to enterprise removed unused glyphicons

--- a/css/everit.css
+++ b/css/everit.css
@@ -1,3 +1,6 @@
+img {
+    margin-top: -11px;
+}
 .everit-header {
     background-color: rgb(90, 183, 14);
     background-image: -webkit-linear-gradient(top, #4FA10D 0, rgb(90, 183, 14) 100%);
@@ -25,7 +28,7 @@
 }
 .bs-docs-booticon-outline {
     background-color: transparent;
-    border: 1px solid #cdbfe3;
+    border: 1px solid rgb(255, 255, 255);
     border-radius: 50%;
 }
 .btn-outline {
