fix affix behaviour after loading

--- a/css/everit.css
+++ b/css/everit.css
@@ -1,10 +1,8 @@
-img {
-    margin-top: -11px;
-}
 .logo {
     width: 100px;
     height: 100px;
-    margin-left: -3px;
+    margin-top: -10px;
+    margin-left: -2px;
 }
 .everit-header {
     background-color: rgb(90, 183, 14);
@@ -61,6 +59,11 @@ a:hover,
 a:focus {
     color: rgb(90, 183, 14);
     text-decoration: underline;
+}
+.everit-affix {
+    margin-left: 30px;
+    margin-top: 60px;
+    width: 152px;
 }
 .affix,
 .affix-top {
