--- a/css/everit.css
+++ b/css/everit.css
@@ -4,6 +4,11 @@
     margin-top: -10px;
     margin-left: -2px;
 }
+.logo2 {
+    width: 90px;
+    height: 90px;
+    margin-top: 5px;
+}
 .everit-header {
     background-color: rgb(90, 183, 14);
     background-image: -webkit-linear-gradient(top, #4FA10D 0, rgb(90, 183, 14) 100%);
