ECM documentation is ready

--- a/css/everit.css
+++ b/css/everit.css
@@ -59,9 +59,19 @@ html {
 .nav-pills>li.active>ul>li.active>a,
 .nav-pills>li.active>ul>li.active>a:hover,
 .nav-pills>li.active>ul>li.active>a:focus
-    {
+{
     background-color: rgb(120, 213, 44);
 }
+.nav-pills>li.active>ul>li.active>ul>li.active>a,
+.nav-pills>li.active>ul>li.active>ul>li.active>a:hover,
+.nav-pills>li.active>ul>li.active>ul>li.active>a:focus
+{
+    color: rgb(90, 183, 14);
+    background: none;
+    border: solid 2px rgb(120, 213, 44);
+}
+
+
 a {
     color: rgb(90, 183, 14);
     text-decoration: none;
