Updated gitignore. Merged everit.css with another version, used by the timetracker plugin gh-pages branch.

--- a/css/everit.css
+++ b/css/everit.css
@@ -34,6 +34,54 @@ html {
 .bs-docs-featurette-title {
     margin-bottom: 30px;
 }
+.bs-docs-featurette>.container>h2 {
+    margin-bottom: 25px;
+}
+.container>ul {
+    list-style-type: none;
+    padding: 0;
+}
+.bs-docs-featurette>h2 {
+    margin-bottom: 25px;
+}
+.bs-docs-featurette>h3 {
+    margin-top: 25px;
+    margin-bottom: 15px;
+    color: #555;
+}
+.bs-docs-featurette>h4 {
+    margin-top: 20px;
+    margin-bottom: 10px;
+    color: #555;
+}
+.bs-docs-featurette>ol {
+    margin-left: 50px;
+    margin-right: 50px;
+}
+.bs-docs-featurette>ol>li {
+    text-align: justify;
+}
+.bs-docs-featurette>ol>li>p {
+    color: #555;
+}
+.bs-docs-featurette>ul {
+    position: relative;
+    left: 5%;
+    width: 95%;
+    align-content: center;
+}
+.bs-docs-featurette>ul>li {
+    text-align: justify;
+    padding-bottom: 5px;
+}
+.bs-docs-featurette>ul>li>ul>li {
+    text-align: justify;
+    padding-bottom: 2px;
+    padding-top: 2px;
+}
+.bs-docs-featurette>ul>li>p {
+    color: #555;
+}
 .bs-docs-booticon-outline {
     background-color: transparent;
     border: 1px solid #aad99d;
@@ -58,8 +106,7 @@ html {
 }
 .nav-pills>li.active>ul>li.active>a,
 .nav-pills>li.active>ul>li.active>a:hover,
-.nav-pills>li.active>ul>li.active>a:focus
-{
+.nav-pills>li.active>ul>li.active>a:focus {
     background-color: rgb(120, 213, 44);
 }
 .nav-pills>li.active>ul>li.active>ul>li.active>a,
@@ -70,8 +117,6 @@ html {
     background: none;
     border: solid 2px rgb(120, 213, 44);
 }
-
-
 a {
     color: rgb(90, 183, 14);
     text-decoration: none;
@@ -81,48 +126,80 @@ a:focus {
     color: rgb(90, 183, 14);
     text-decoration: underline;
 }
+#affix-nav {
+    width: 100%;
+}
 .everit-affix {
     margin-left: 30px;
     margin-top: 60px;
-    width: 152px;
+    min-width: 125px;
+    width: 300px;
 }
-.affix,
 .affix-top {
-    margin-left: 30px;
     position: static;
     margin-top: 60px;
+    width: auto;
+}
+.affix {
+    top: 0px;
+    position: static;
+    width: auto;
+}
+.affix-bottom {
+    position: static;
+    width: auto;
 }
 @media (min-width: 979px) {
+    .affix {
+        margin-left: 30px;
+        margin-top: 60px;
+        top: 0px;
+        position: fixed;
+        width: auto;
+    }
+    .affix-bottom {
+        position: absolute;
+        width: auto;
+    }
+}
+@media (min-width: 1276px) {
+    .affix-top {
+        min-width: 200px;
+    }
+    .affix {
+        min-width: 200px;
+        position: fixed;
+    }
+}
+@media (min-width: 1500px) {
     .affix-top {
         position: static;
         margin-top: 60px;
-        width: 152px;
+        min-width: 300px;
+        width: auto;
     }
     .affix {
         margin-left: 30px;
         top: 0px;
-        width: auto;
         position: fixed;
+        min-width: 300px;
+        width: auto;
     }
-}
-.affix-top {
-    position: static;
-    margin-top: 60px;
-    width: 152px;
-}
-.affix-bottom {
-    position: absolute;
-    width: 152px;
 }
 .featurette-divider {
     border-top: 1px solid #e5e5e5;
     margin: 0;
     padding: 0;
 }
+.cookbook {
+    text-align: justify;
+}
+.img-responsive {
+    margin-bottom: 25px;
+}
 #affix-nav .nav .nav {
     display: none;
 }
-
 #affix-nav .nav>.active>.nav {
     display: block;
     margin-left: 10px;
@@ -130,7 +207,6 @@ a:focus {
 #affix-nav>.nav>li>a {
     padding: 8px 13px;
 }
-
 #affix-nav>.nav>li>ul>li>a {
     padding: 8px 13px;
 }
